fixed arrow not showing

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -296,11 +296,11 @@ body {
   .icon-link__arrow {
     display: block;
     position: absolute;
-    top: 57%;
-    left: 52%;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
     color: #202124;
-    font-size: 3.1rem; }
+    font-size: 2.1rem; }
   .icon-link:active {
     box-shadow: 0rem 0rem 2rem white;
     border: 1px solid rgba(95, 99, 104, 0.3); }
