--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -127,11 +127,11 @@
   &__arrow {
     display: block;
     position: absolute;
-    top: 57%;
-    left: 52%;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
     color: $color-black;
-    font-size: 3.1rem;
+    font-size: 2.1rem;
   }
 
   &:active {
